perfil con información dinámica

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ div.foto img  {width: 90%;
     margin-bottom: 20px;
     border-top-left-radius: 35px;}
 
-.maximiliano {
+#nombre {
     width: 100%;
     height: 100%;
     vertical-align : middle;
